--- a/src/app/post-login/components/announcement-management/announcement-management.component.scss
+++ b/src/app/post-login/components/announcement-management/announcement-management.component.scss
@@ -10,6 +10,7 @@ button:focus {
 
 .main-container {
     padding: 0 30px 42px 30px;
+    flex-grow: 1;
 }
 
 .section-header{
@@ -415,6 +416,7 @@ button:focus {
     padding: 25px 20px;
     box-shadow: 0px 4px 10px rgba(#000, 0.4);
     position: relative;
+    margin-top: -52px;
 }
 
 .announcement-header{
