location dropdown sorting

--- a/src/app/post-login/components/home/home.component.html
+++ b/src/app/post-login/components/home/home.component.html
@@ -22,6 +22,7 @@
             <kendo-multiselecttree
               #locationTree
               [kendoMultiSelectTreeHierarchyBinding]="dataLocations"
+              [itemDisabled]="itemDisabled"
               childrenField="items"
               textField="text"
               valueField="text"
