--- a/src/app/post-login/components/financial-data/add-new-client/add-new-client.component.scss
+++ b/src/app/post-login/components/financial-data/add-new-client/add-new-client.component.scss
@@ -31,6 +31,7 @@ button:focus {
     .heading-text{
         gap: 14px;
         align-items: center;
+        text-transform: capitalize;
 
         img{
             width: 35px;
@@ -122,6 +123,16 @@ button:focus {
     font-size: 12px;
     font-weight: 600;
     line-height: 16px; 
+}
+
+.btn-undo-redo {
+    background-color: #f5f7f7;
+    font-size: 12px;
+    color: #2F2F2F;
+}
+
+.undo-redo-icon {
+    width: 20px;
 }
 
 .table-section{
