--- a/src/app/post-login/components/financial-data/custom-drop-down-editor/custom-drop-down-editor.component.html
+++ b/src/app/post-login/components/financial-data/custom-drop-down-editor/custom-drop-down-editor.component.html
@@ -1,5 +1,13 @@
 <kendo-dropdownlist 
+*ngIf="!isTextBoxDisplay"
 [data]="franchiseList" 
 (valueChange)="onValueChange($event)"
 [value]="selectedValue"
 ></kendo-dropdownlist>
+
+<input
+*ngIf="isTextBoxDisplay"
+kendoTextBox
+class="textBox"
+(input)="onInput()"
+>
