--- a/src/app/post-login/components/financial-data/financial-data.component.scss
+++ b/src/app/post-login/components/financial-data/financial-data.component.scss
@@ -485,3 +485,9 @@ button:focus {
 ::ng-deep .hide-header-name .ag-header-cell-comp-wrapper .ag-cell-label-container .ag-header-cell-label .ag-header-cell-text{
     display: none;
 }
+
+.btn-add-year {
+    background-color: #f5f7f7;
+    font-size: 12px;
+    color: #2F2F2F;
+}
