--- a/src/app/post-login/components/financial-data/edit-saas-revenue/edit-saas-revenue.component.html
+++ b/src/app/post-login/components/financial-data/edit-saas-revenue/edit-saas-revenue.component.html
@@ -1,4 +1,6 @@
 <div class="main-container">
+    <div class="append-container" #toastcontainer></div>
+
     <div class="section-header">
         <div class="heading-text d-flex">
             <img src="assets/images/person-pin-outline-rounded.svg" alt="Bar-chart icon">
