--- a/src/app/post-login/components/financial-data/edit-saas-revenue/edit-saas-revenue.component.scss
+++ b/src/app/post-login/components/financial-data/edit-saas-revenue/edit-saas-revenue.component.scss
@@ -114,6 +114,7 @@ button:focus {
             background-color: #f5f7f7;
             font-size: 12px;
             color: #2F2F2F;
+            width: max-content;
         }
 
         .undo-redo-icon {
@@ -550,4 +551,64 @@ button:focus {
    &:first-child{
        margin-top: -52px !important;
    }
+}
+
+:host ::ng-deep {
+    .k-notification-group {
+        flex-flow: column !important;
+        display: flex;
+        gap: 5px;
+    }
+
+    .k-notification{
+        border: none;
+        border-radius: 0;
+        padding: 6px 0 6px 16px;
+        box-shadow: none;
+    }
+
+    .k-notification-container{
+         margin-block: unset;
+         margin-inline: unset;
+        &:first-child{
+            margin-top: -33px;
+        }
+    }
+
+    .k-notification-success{
+        background-color: #237B4B;
+    }
+
+    .k-notification-warning{
+        background-color: #EC8A0C;
+        color: #FFF;
+    }
+
+    .k-notification-error{
+        background-color: #D91E37;
+    }
+
+    .k-notification-info{
+        border: 1px solid #D1D1D1 !important;
+        background-color: #EBEBEB;
+        color: #000;
+
+        & .message-text, & .message-text span {
+            color: #000 !important;
+        }
+
+        & .k-svg-i-x{
+            content:  url('/assets/images/close-icon-black.svg');
+        }
+    }
+
+    .k-notification-content .k-image{
+        height: 40px;
+    }
+
+    .k-svg-i-x{
+        content:  url('/assets/images/close-icon.svg');
+        height: 40px;
+        width: 40px;
+    }
 }
