--- a/src/app/shared/components/notifications/notifications.component.scss
+++ b/src/app/shared/components/notifications/notifications.component.scss
@@ -44,7 +44,7 @@
     margin-left: auto;
 }
 
-::ng-deep {
+:host ::ng-deep {
     .k-notification-group {
         flex-flow: column !important;
         display: flex;
