--- a/src/app/post-login/components/financial-data/financial-data.component.scss
+++ b/src/app/post-login/components/financial-data/financial-data.component.scss
@@ -493,9 +493,7 @@ button:focus {
         justify-content: center;
         align-items: center;
         border-radius: 4px;
-        background: #296689;}
-        <style>
-        .k-notification-warning {
+        background: #296689;
         padding: 8px 14px 8px 15px;
         text-transform: uppercase;
         font-family: 'Proxima Nova';
